--- a/exercicios-web/poxedex/assets/css/global.css
+++ b/exercicios-web/poxedex/assets/css/global.css
@@ -3,65 +3,21 @@
     box-sizing: border-box; /*Considera a borda para calculo do tamanho total*/
 }
 
-
+body{
+    background-color: #f6f8fc;
+}
 .content {
-  padding: 1rem; /*Medida baseada na fonte do computador*/
+    width: 100vw;
+    height: 100vh;
+    padding: 1rem; /*Medida baseada na fonte do computador*/
+    background-color: #fff;
 }
 
-.pokemons{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.pokemon{
-    display: flex;
-    flex-direction: column;
-    margin: 0.5rem;
-    padding: 1rem;
-    border-radius: 1rem;
-    background-color: #49d0b0;
-}
-
-.pokemon .number{
-    color: #000;
-    opacity: .3;
-    text-align: right;
-    font-size: .625rem;
-}
-
-.pokemon .name{
-    color: #fff;
-    margin-bottom: 0;
-
-}
-
-.pokemon .details{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.pokemon .details .types{
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-
-.pokemon .details .types .type{
-    background-color: #61e1ca;
-    color: #fff;
-    padding: .25rem .5rem;
-    margin: .125rem;
-    font-size: .825rem;
-    border-radius: 1rem;
-}
-
-.pokemons .details img{
-    max-width: 100%;
-    height: 70px;
+@media screen and(min-width: 992px){
+    .content{
+        max-width: 992px;
+        height: auto;
+        margin: 1rem auto;
+        border-radius: 1rem;
+    }
 }
