--- a/exercicios-web/pokedex/assets/css/pokedex.css
+++ b/exercicios-web/pokedex/assets/css/pokedex.css
@@ -7,13 +7,84 @@
     margin: 0;
 }
 
+.normal{
+    background-color: #919AA2;
+}
+
+.grass{
+    background-color: #63BC5A;
+}
+
+.fire{
+    background-color: #FF9D55;
+}
+
+.water{
+    background-color: #5090D6;
+}
+
+.electric{
+    background-color: #F4D23C;
+}
+
+.ice{
+    background-color: #98d5d7;
+}
+
+.ground{
+    background-color: #dfbf69;
+}
+
+.flying{
+    background-color: #a98ff0;
+}
+
+.poison{
+    background-color: #bc55bc;
+}
+
+.fighting{
+    background-color: #d84747;
+}
+
+.psychic{
+    background-color: #FA7179;
+}
+
+.dark{
+    background-color: #725847;
+}
+
+.rock{
+    background-color: #6e6b69;
+}
+
+.bug{
+    background-color: #91C12F;
+}
+
+.ghost{
+    background-color: #6e5896;
+}
+
+.steel{
+    background-color: #b9b7cf;
+}
+
+.dragon{
+    background-color: #0B6DC3;
+}
+
+.fairy{
+    background-color: #EC8FE6;
+}
+
 .pokemon{
     display: flex;
     flex-direction: column;
     margin: 0.5rem;
     padding: 1rem;
     border-radius: 1rem;
-    background-color: #49d0b0;
 }
 
 .pokemon .number{
@@ -26,6 +97,7 @@
 .pokemon .name{
     color: #fff;
     margin-bottom: 0;
+    text-transform: capitalize; /*Deixa primeira letra maiuscula*/
 
 }
 
@@ -42,19 +114,41 @@
     list-style: none;
 }
 
-
 .pokemon .details .types .type{
-    background-color: #61e1ca;
-    color: #fff;
+    background-color: #fff;
     padding: .25rem .5rem;
     margin: .125rem;
     font-size: .825rem;
     border-radius: 1rem;
+    opacity: .3;
+    text-align: center;
+    text-transform: capitalize;
 }
+
 
 .pokemons .details img{
     max-width: 100%;
     height: 70px;
+}
+
+.pagination{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 1rem;
+}
+
+.pagination button{
+    padding: .25rem .5rem;
+    margin: .25rem 0;
+    font-size: 1rem;
+    color: #fff;
+    background-color: #6c79db;
+    border: none;
+    border-radius: 1rem;
+    
 }
 
 @media screen and (min-width: 380px){
